k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: citasalud
  labels:
    name: citasalud
    environment: production
